# open-typing-texts

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  OTT_SPEC.md  README.md  SPEC.md  pyproject.toml  registry_index.json
.github/workflows/: daily.yml  weekly-static.yml
docs/: ADAPTER_GUIDE.md  SCRIPT_GUIDE.md  WORKFLOW_GUIDE.md
ott_adapter/: __init__.py  __main__.py  ott_core.py  scheduler.py  server.py
scripts/: fetch_daily.py  fetch_jisubei.py  fetch_poem.py  gen_index.py
src/ott_adapter/: __init__.py  __main__.py  scheduler.py  server.py
tests/: test_ott_adapter.py
