[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ott-adapter"
version = "0.1.0"
description = "本地 HTTP 适配器，为 typetype 等打字练习应用提供 OTT 文本服务"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ott-adapter = "ott_adapter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
